--- a/package.json
+++ b/package.json
@@ -2,5 +2,20 @@
   "name": "practice",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-plugin-node": "^8.0.1",
+    "nodemon": "^1.18.9"
+  },
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
