--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env PORT=3000 node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js gulp"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.0",
     "eslint": "^5.12.0",
     "eslint-plugin-node": "^8.0.1",
     "nodemon": "^1.18.9"
@@ -18,12 +19,18 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
+    "concat": "^1.0.3",
     "connect-mongo": "^2.0.3",
     "cross-env": "^5.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglifyjs": "^0.6.2",
     "jquery": "^3.3.1",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "static-asset": "^0.6.0",
+    "uglifyjs": "^2.4.11"
   }
 }
