--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "extends": ["eslint:recommended", "plugin:node/recommended"],
     "rules": {
       "node/exports-style": ["error", "module.exports"],
-      "no-console": 0
+      "no-console": 0,
+      "no-undef":"off"
     }
 }
